--- a/r2/r2/templates/linkinfobar.html
+++ b/r2/r2/templates/linkinfobar.html
@@ -21,7 +21,7 @@
 ################################################################################
 <%namespace file="printable.html" import="state_button, thing_css_class" />
 
-<div class="raisedbox linkinfo ${thing_css_class(thing.a)}">
+<div class="raisedbox linkinfo">
   <table class="details">
     %if not thing.a.is_self:
       <tr><th>${_("toolbar link")}</th>
