--- a/r2/r2/templates/loginformwide.html
+++ b/r2/r2/templates/loginformwide.html
@@ -44,7 +44,7 @@
   <input name="user" type="text" maxlength="20" tabindex="1"/>
   <input name="passwd" type="password" maxlength="20" tabindex="2"/>
 
-  ${error_field("WRONG_PASSWORD", "div")}
+  ${error_field("WRONG_PASSWORD", "passwd", "div")}
   <div class="status error"></div>
 
   <div id="remember-me">
