--- a/r2/r2/templates/password.html
+++ b/r2/r2/templates/password.html
@@ -21,33 +21,24 @@
 ################################################################################
 
 <%namespace file="utils.html" import="error_field, success_field"/>
-${success_field(_('you should receive an email shortly'),
-                successful=thing.success, hide='passform')}
+<%namespace name="utils" file="utils.html"/>
 
 <form id="passform" action="/api/password" method="post"
-      class="content pretty-form medium-text"
+      class="content"
       onsubmit="return post_form(this, 'password');">
   <h1>${_("what's my password?")}</h1>
-  <p> ${_("enter your user name below to receive your login information")}</p>
-  <table>
-    <tr>
-      <td>
-        <label for="name">${_("username")}</label>
-      </td>
-      <td>
-        <input type="text" id="name" name="name" />
-      </td>
-      <td>
-        <button type="submit" class="btn">${_("email me")}</button>
-      </td>
-    </tr>
-    <tr>
-     <td colspan="2">
-        <span class="status"></span>
-        ${error_field("USER_DOESNT_EXIST", "span")}
-        ${error_field("NO_EMAIL_FOR_USER", "span")}
-      </td>
-    </tr>
-  </table>
+  <p>${_("enter your user name below to receive your login information")}</p>
+
+<div class="spacer">
+  <%utils:round_field title="${_('username')}">
+    <input type="text" name="name" />
+    ${error_field("USER_DOESNT_EXIST", "name")}
+    ${error_field("NO_EMAIL_FOR_USER", "name")}
+  </%utils:round_field>
+</div>
+
+<button type="submit" class="btn">${_("email me")}</button>
+<span class="status"></span>
+
 </form>
 
