--- a/r2/r2/templates/permalinkmessage.html
+++ b/r2/r2/templates/permalinkmessage.html
@@ -20,11 +20,10 @@
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
 
-<div class="autosize">
-<div class="permamessage">
-  <p style="margin:0">
-  ${_("you are viewing a single comment's thread")}
-  </p>
-  <p style="margin: 4px 0 0 0"><a href="${thing.comments_url}">${_("see the above comments")}</a></p>
-</div>
+<div class="infobar">
+    ${_("you are viewing a single comment's thread.")}
+    <p>
+      <a href="${thing.comments_url}">${_("view the rest of the comments")}</a>
+        &nbsp;&#8594;
+    </p>
 </div>
