--- a/r2/r2/templates/redditheader.html
+++ b/r2/r2/templates/redditheader.html
@@ -97,4 +97,10 @@
   <div class="arrow upmod"></div>
   <div class="arrow down"></div>
   <div class="arrow downmod"></div>
+  <div class="eb-sch"></div>
+  <div class="eb-se"></div>
+  <div class="eb-seh"></div>
+  <div class="eb-vch"></div>
+  <div class="eb-ve"></div>
+  <div class="eb-veh"></div>
 </div>
