--- a/r2/r2/templates/resetpassword.html
+++ b/r2/r2/templates/resetpassword.html
@@ -21,6 +21,7 @@
 ################################################################################
 
 <%namespace file="utils.html" import="error_field, success_field"/>
+<%namespace name="utils" file="utils.html"/>
 
 %if thing.done:
 <p class="error">your password has been reset and you've been logged in.  Go use the site!</p>
@@ -28,52 +29,27 @@
 ${error_field("EXPIRED", 'p')}
 
 <form id="chpass" method="post" action="/api/resetpassword" 
-      onsubmit="return post_form(this,'resetpassword')"
-      class="pretty-form">
-  <h1>reset your password</h1>
+      onsubmit="return post_form(this,'resetpassword')">
+
+  <h1>choose a new password</h1>
   <input type="hidden" name="key" value="${thing.key}"/>
-  <table>
-    <tr>
-      <td>
-        ${_("username")}
-      </td>
-      <td>
-        <input class="logtxt" name="name" 
-               id="name" type="text"/>
-      </td>
-    </tr>
-    <tr>
-      <td>
-        ${_("new password")}
-      </td>
-      <td>
-        <input class="logtxt" name="passwd" 
-               id="passwd" type="password"/>
-      </td>
-      <td>
-        ${error_field("BAD_PASSWORD")}
-      </td>
-    </tr>
-    <tr>
-      <td>
-        ${_("verify password")}
-      </td>
-      <td>
-        <input class="logtxt" name="passwd2" 
-               id="passwd2" type="password"/>
-      </td>
-      <td>
-        ${error_field("BAD_PASSWORD_MATCH")}
-      </td>
-    </tr>
-    <tr>
-      <td>
-      </td>
-      <td>
-        <button class="btn" type="submit">submit</button>
-        <span class="status"></span>
-      </td><td></td>
-    </tr>
-  </table>
+
+  <div class="spacer">
+    <%utils:round_field title="${_('new password')}">
+      <input type="password" name="passwd" />
+      ${error_field("BAD_PASSWORD", "passwd")}
+    </%utils:round_field>
+  </div>
+
+  <div class="spacer">
+    <%utils:round_field title="${_('verify password')}">
+      <input type="password" name="passwd2" />
+      ${error_field("BAD_PASSWORD_MATCH", "passwd2")}
+    </%utils:round_field>
+  </div>
+
+<button class="btn" type="submit">submit</button>
+<span class="status"></span>
+
 </form>
 %endif
