--- a/r2/r2/templates/userlist.html
+++ b/r2/r2/templates/userlist.html
@@ -34,7 +34,7 @@
       <input type="text" name="name" id="name"/>
       <button class="btn" type="submit">${_("add")}</button>
       <span class="status"></span>
-      ${error_field("USER_DOESNT_EXIST", "span")}
+      ${error_field("USER_DOESNT_EXIST", "name")}
     </form>
   %endif
 
