--- a/r2/r2/templates/captcha.html
+++ b/r2/r2/templates/captcha.html
@@ -23,7 +23,35 @@
 <%! from r2.lib.template_helpers import static %>
 
 <%namespace file="utils.html" import="error_field"/>
-${captchagen(thing.iden, thing.error)}
+<%namespace name="utils" file="utils.html"/>
+
+##${captchagen(thing.iden, thing.error)}
+
+${rounded_captcha()}
+
+<%def name="captcha_basics(iden='')">
+  <%
+    iden = getattr(thing, "iden", iden)
+  %>
+  <input name="iden" value="${iden}" type="hidden"/>
+
+  <img class="capimage"
+       alt="i wonder if these things even work" 
+       %if hasattr(thing, "iden"):
+       src="/captcha/${thing.iden}.png" 
+       %else:
+       src="${static('kill.png')}" 
+       %endif
+       />
+</%def>
+
+<%def name="rounded_captcha()">
+<%utils:round_field title="${_('are you human?')}" description="${_('(sorry)')}" css_class="captcha">
+    ${captcha_basics()}
+    <input name="captcha" class="captcha" type="text" />
+    ${error_field("BAD_CAPTCHA", "captcha")}
+  </%utils:round_field>
+</%def>
 
 <%def name="captchagen(iden, error='', tabulate=False, tabular = True, size=60, label=True, show_error = True)">
 %if tabulate:
@@ -34,14 +62,7 @@ ${captchagen(thing.iden, thing.error)}
     <td></td>
     <td>
   %endif
-      <img class="capimage"
-           alt="i wonder if these things even work" 
-           %if iden:
-           src="/captcha/${iden}.png" 
-           %else:
-           src="${static('kill.png')}" 
-           %endif
-           />
+  ${captcha_basics(iden)}
   %if tabular:
   </td>
   </tr>
@@ -57,8 +78,7 @@ ${captchagen(thing.iden, thing.error)}
      </td>
      <td>
      %endif
-        <input name="iden" type="hidden" value="${iden}"/>
-        <input class="captcha cap-text" id="captcha_"
+          <input class="captcha cap-text" id="captcha_"
                name="captcha" type="text" size="${size}" />
         <script type="text/javascript">
           emptyInput($('input.captcha'), "${_('type the letters from the image above')}");
@@ -70,7 +90,7 @@ ${captchagen(thing.iden, thing.error)}
      </span>
      %endif
      %if show_error:
-       ${error_field("BAD_CAPTCHA", "span")}
+       ${error_field("BAD_CAPTCHA", "captcha")}
      %endif
   %if tabular:
     </td>
@@ -80,3 +100,4 @@ ${captchagen(thing.iden, thing.error)}
 </table>
 %endif
 </%def>
+
