--- a/r2/r2/templates/messagecompose.html
+++ b/r2/r2/templates/messagecompose.html
@@ -20,57 +20,48 @@
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
 
-<%namespace file="utils.html" import="error_field, submit_form, success_field"/>
+<%namespace file="utils.html" import="error_field, submit_form"/>
+<%namespace name="utils" file="utils.html"/>
+
+<%!
+   from r2.lib.pages import UserText
+%>
 
 <h1>${_("send a message")}</h1>
 
 
-<%call expr="submit_form(
-             onsubmit='return post_form(this, \'compose\', null, null, true)',
-             method='post', _id = 'compose-message',
-             action='/message/compose', _class='iform')">
-${success_field(_("your message has been delivered"), successful=thing.success)}
-  <table>
-    <tr>
-      <th>
-        <label for="to">${_("to (username)")}</label></th>
-      <td><input type="text" name="to" value="${thing.to or ''}" 
-                 id="to" size="40"/></td>
-      <td>${error_field("NO_USER", "span")}
-        ${error_field("USER_DOESNT_EXIST", "span")}</td>
-    </tr>
-    <tr>
-      <th>
-        <label for="subject">${_("subject")}</label>
-      </th>
-      <td>
-        <input type="text" name="subject" size="40" id="subject"\
-               value="${thing.subject or ''}"/>
-      </td>
-      <td>${error_field("NO_SUBJECT", "span")}</td>
-    </tr>
-    <tr>
-      <th>
-        <label for="message">${_("message")}</label>
-      </th>
-      <td>
-        <textarea id="message" name="message" rows="10" cols="40">
-          ${thing.message or ''}
-      </textarea></td>
-      <td>${error_field("NO_MSG_BODY", "span")}
-        ${error_field("COMMENT_TOO_LONG", "span")}</td>
-    </tr>
-    %if thing.captcha:
-      ${thing.captcha.render()}
-    %endif
-    <tr>
-      <th>
-        <label for="send"></label>
-      </th>
-      <td>
-        <button id="send" name="send" type="submit">${_("send")}</button>
-        <span id='status' class='error'></span>
-      </td>
-      <td id="note_send"></td></tr>
-  </table>
-</%call>
+<%utils:submit_form onsubmit="return post_form(this, 'compose', null, null, true)",
+                    method="post", _id = "compose-message",
+                    action="/message/compose">
+
+<div class="spacer">
+  <%utils:round_field title="${_('to')}", description="${_('(username)')}">
+    <input type="text" name="to" value="${thing.to or ''}"/>
+    ${error_field("NO_USER", "to")}
+    ${error_field("USER_DOESNT_EXIST", "to")}
+  </%utils:round_field>
+</div>  
+
+<div class="spacer">
+  <%utils:round_field title="${_('subject')}">
+    <input type="text" name="subject" value="${thing.subject or ''}"/>
+    ${error_field("NO_SUBJECT", "subject", "span")}
+  </%utils:round_field>
+</div>  
+
+<div class="spacer">
+  <%utils:round_field title="${_('message')}">
+    ${UserText(None, have_form = False, creating = True).render()}
+  </%utils:round_field>
+</div>  
+
+<div class="spacer">
+  %if thing.captcha:
+    ${thing.captcha.render()}
+  %endif
+</div>  
+
+<button id="send" name="send" type="submit">${_("send")}</button>
+<span class="status"></span>
+
+</%utils:submit_form>
