--- a/r2/r2/templates/prefdelete.html
+++ b/r2/r2/templates/prefdelete.html
@@ -21,28 +21,36 @@
 ################################################################################
 
 <%namespace file="utils.html" import="error_field"/>
+<%namespace name="utils" file="utils.html"/>
+
 <% import random %>
 <%def name="areyousure(name)">
-  <tr><td>${_("are you sure?")}</td>
-      <% yes, no = random.choice(((_("yes"), _("no")), (_("no"), _("yes")))) %>
-      <td><input name="${name}" id="${name}yes" type="radio" value="${yes}"/>
+  <% yes, no = random.choice(((_("yes"), _("no")), (_("no"), _("yes")))) %>
+
+  <div class="spacer">
+    <%utils:round_field title="${_('are you sure?')}">
+      <div class="rounded delete-field">
+        <input name="${name}" id="${name}yes" type="radio" value="${yes}"/>
         <label for="${name}yes">${yes}</label>
-      </td>
-      <td><input name="${name}" id="${name}no" type="radio" value="${no}"/>
+
+        <br/>
+  
+        <input name="${name}" id="${name}no" type="radio" value="${no}"/>
         <label for="${name}no">${no}</label>
-      </td>
-  </tr>
+      </div>
+    </%utils:round_field>
+  </div>  
 </%def>
 
 <h1>${_("delete your reddit account? hope you have a good reason.")}</h1>
 
-<form action="/post/delete" method="post" class="pretty-form"
+<form action="/post/delete" method="post" 
       onsubmit="${"return post_form(this, 'delete_user', function(x) {return '%s'})" % _("deleting...")}" id="pref-delete">
-<table>
+
 ${areyousure("areyousure1")}
 ${areyousure("areyousure2")}
 ${areyousure("areyousure3")}
-</table>
+
 <input type="submit" class="btn" value="${_('delete')}"/>
 <span class="status"></span>
 </form>
