--- a/r2/r2/templates/selftext.html
+++ b/r2/r2/templates/selftext.html
@@ -16,7 +16,17 @@
 ## The Original Developer is the Initial Developer.  The Initial Developer of
 ## the Original Code is CondeNet, Inc.
 ## 
-## All portions of the code written by CondeNet are Copyright (c) 2006-2009
+## All portions of the code written by CondeNet are Copyright (c) 2006-2008
 ## CondeNet, Inc. All Rights Reserved.
 ################################################################################
+<%!
+    from r2.lib.filters import unsafe, safemarkdown, keep_space
+%>
+<%namespace file="utils.html" import="error_field"/>
+
+<div class="selftextcontainer">
+  <div class="selftext rounded">
+    ${unsafe(safemarkdown(thing.link.selftext))}
+  </div>
+</div>
 
