--- a/r2/r2/templates/subredditstylesheet.html
+++ b/r2/r2/templates/subredditstylesheet.html
@@ -108,7 +108,7 @@
       </th>
       <td class="prefright">
         <input id="img-name" name="name" value="" type="text"/>
-        ${error_field("BAD_CSS_NAME", "span")}
+        ${error_field("BAD_CSS_NAME", "name")}
         <br/>
         <span class="little gray">
           ${_("(image names should consist of alphanumeric characters and '-' only)")}
